--- a/controller/src/index.css
+++ b/controller/src/index.css
@@ -1,5 +1,7 @@
-//Author: Krish Shah
-//Reviewed by: Sai Raparla
+/* 
+Author Krish Shah
+Reviewed by: Sai Raparla
+*/
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
